<resources>
    <string name="app_name">SmartDog</string>
    <string name="action_settings">Settings</string>
    <string name="link_register_label">New to SmartDog? Register here</string>
    <string name="hint_login_email">Email</string>
    <string name="hint_login_password">Password</string>
    <string name="bt_login_label">Login</string>
    <string name="hint_reg_fullname">Your Full Name</string>
    <string name="hint_reg_email">Your Email Address</string>
    <string name="hint_reg_password">Your Password</string>
    <string name="bt_reg_account">Register New Account</string>
    <string name="link_login_label">Already has account! Login here</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
</resources>
