<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">

        <!--  Header  Starts-->
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingBottom="5dip"
            android:paddingTop="5dip">
            <!-- Logo Start-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:src="@drawable/smartdog_logo" />
            <!-- Logo Ends -->
        </LinearLayout>
        <!--  Header Ends -->
        <!-- Footer Start -->
        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:background="@layout/footer_repeat"
            android:orientation="vertical"></LinearLayout>
        <!-- Footer Ends -->

        <!-- Login Form -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip">
            <!--  Email Label -->
            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="10dip"
                android:hint="@string/hint_login_email"
                android:singleLine="true"
                android:textStyle="bold" />

            <!--  Password Label -->
            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:hint="@string/hint_login_password"
                android:password="true"
                android:singleLine="true"
                android:textStyle="bold" />
            <!-- Login button -->
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@color/btn_logut_bg"
                android:text="@string/bt_login_label"
                android:textColor="@color/white"
                android:textStyle="bold" />
            <!-- Link to Registration Screen -->
            <TextView
                android:id="@+id/link_to_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dip"
                android:layout_marginTop="40dip"
                android:gravity="center"
                android:text="@string/link_register_label"
                android:textColor="#0b84aa"
                android:textSize="20dip"
                android:textStyle="bold" />

        </LinearLayout>
        <!-- Login Form Ends -->

    </RelativeLayout>
</ScrollView>
